Work around Wildfly startup failure on Java 11.